The Bot is connected to Twitch Chat

--- a/ManaBot/ManaBot/ManaBot.csproj
+++ b/ManaBot/ManaBot/ManaBot.csproj
@@ -112,12 +112,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="web\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="files\songlist.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="web\chat.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="web\chat.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
