--- a/ManaBot/ManaBot/ManaBot.csproj
+++ b/ManaBot/ManaBot/ManaBot.csproj
@@ -96,20 +96,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="ManaBot.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ManaBot.Designer.cs">
+      <DependentUpon>ManaBot.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Twitch\TopSecret.cs" />
     <Compile Include="Twitch\TwitchAPI.cs" />
+    <Compile Include="Twitch\TwitchCommands.cs" />
     <Compile Include="Twitch\TwitchConnect.cs" />
     <Compile Include="FileManagement\XmlSetting.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ManaBot.resx">
+      <DependentUpon>ManaBot.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
