--- a/ManaBot/ManaBot/ManaBot.csproj
+++ b/ManaBot/ManaBot/ManaBot.csproj
@@ -97,11 +97,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileManagement\DataBase.cs" />
-    <Compile Include="ManaBot.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ManaBot.Designer.cs">
-      <DependentUpon>ManaBot.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -110,8 +110,8 @@
     <Compile Include="Twitch\TwitchCommands.cs" />
     <Compile Include="Twitch\TwitchConnect.cs" />
     <Compile Include="FileManagement\XmlSetting.cs" />
-    <EmbeddedResource Include="ManaBot.resx">
-      <DependentUpon>ManaBot.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
