--- a/ManaBot/ManaBot/packages.config
+++ b/ManaBot/ManaBot/packages.config
@@ -6,10 +6,11 @@
   <package id="CefSharp.WinForms" version="57.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net461" />
   <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net461" />
-  <package id="TwitchLib" version="1.5.5" targetFramework="net461" />
+  <package id="TwitchLib" version="1.5.6" targetFramework="net461" />
   <package id="WebSocketSharp-NonPreRelease" version="1.0.0" targetFramework="net461" />
 </packages>
